fix bearer token in swagger and create methods login / me / logout / register
