# app/Services/Identity/Models/RegisterIn.php
@@ -1,0 +1,23 @@
+<?php
+
+namespace App\Services\Identity\Models;
+
+use App\Services\Base\IDto;
+
+class RegisterIn extends IDto
+{
+    /**
+     * @var string
+     */
+    public $name;
+
+    /**
+     * @var string
+     */
+    public $email;
+
+    /**
+     * @var string
+     */
+    public $password;
+}
